fix(panel): normal scrollbar width on firefox

--- a/src/_sass_global/_fancy-scrollbar.scss
+++ b/src/_sass_global/_fancy-scrollbar.scss
@@ -1,5 +1,5 @@
 $scrollbar-size: 8px;
-$scrollbar-ff-width: thin; // FF-only accepts auto, thin, none
+$scrollbar-ff-width: auto; // FF-only accepts auto, thin, none
 $scrollbar-minlength: 50px; // Minimum length of scrollbar thumb
 $scrollbar-track-color: transparent;
 $scrollbar-color: rgba(138, 138, 138, 0.25);
